# interview-insight-ai

./: .cursorignore  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  env.example  pyproject.toml
.cursor/rules/: README.md  architecture-standards.mdc  best-practices.mdc  cross-project-workflow.mdc  project-overview.mdc  project-setup.mdc
backend/: .gitignore  CLAUDE.md  Makefile  README.md  alembic.ini  env.example  pyproject.toml
backend/.cursor/rules/: api-schemas.mdc  backend-ai-agents.mdc  backend-api-development.mdc  backend-coding-standards.mdc  backend-database-patterns.mdc  backend-docker-development.mdc  backend-project-structure.mdc  backend-quick-reference.mdc  backend-testing.mdc  code-quality.mdc  database-models.mdc  development-workflow.mdc  development.mdc  docker.mdc  fastapi-development.mdc  project-overview.mdc  testing.mdc
backend/docker/: README.md
backend/docker/dev/: Dockerfile.dev  docker-compose.dev.yml
backend/docker/prod/: docker-compose.prod.yml
backend/docker/test/: Dockerfile.test  docker-compose.test.yml
backend/src/: __init__.py
backend/src/app/: __init__.py  main.py
backend/src/migrations/: env.py
backend/tests/: __init__.py  conftest.py
backend/tests/helpers/: __init__.py
backend/tests/integration/: __init__.py  test_api_items.py  test_api_response_envelope.py  test_main.py
backend/tests/unit/: __init__.py  test_base_repository.py  test_exceptions.py  test_items.py
docker/: README.md
docker/dev/: docker-compose.dev.yml
docker/prod/: Dockerfile.prod  docker-compose.prod.yml
docker/test/: docker-compose.test.yml
frai-fe/: package.json
frontend/: CLAUDE.md  README.md  package.json  pnpm-lock.yaml
frontend/.cursor/rules/: code-quality.mdc  development-workflow.mdc  development.mdc  environment-config.mdc  frontend-coding-standards.mdc  frontend-nextjs-patterns.mdc  frontend-project-structure.mdc  frontend-quick-reference.mdc  frontend-styling.mdc  frontend-testing.mdc  frontend-ui-components.mdc  (+4 more)
frontend/src/: env.js
src/: __init__.py
src/app/: main.py
src/migrations/: env.py
tests/: conftest.py  test_api_response_envelope.py  test_items_unit.py
tests/helpers/: generators.py  mocks.py
tests/integration/: test_api_items.py  test_api_response_envelope.py  test_main.py
tests/unit/: test_base_repository.py  test_exceptions.py  test_items.py
(+76 files in other folders)
